# Framework

./: .clang_complete  .gitignore  CMakeLists.txt  clean  main.cpp  open_all  readme.txt  todo.txt  update_build  update_clang_complete
engine/independent/common/: assert.h  itime.h  macros.h  stdafx.cpp  stdafx.h  types.h
engine/independent/graphics/: display.cpp  display.h
engine/independent/input/: keyboard.cpp  keyboard.h
engine/independent/kernel/time/: realtimeclock.cpp  realtimeclock.h  time.cpp  time.h  timer.cpp  timer.h  timesource.cpp  timesource.h
engine/linux/common/: platform_stdafx.h
engine/linux/kernel/time/: platform_realtimeclock.cpp  platform_systemclock.cpp  platform_time.cpp
engine/windows/common/: platform_stdafx.h
engine/windows/kernel/time/: platform_realtimeclock.cpp  platform_systemclock.cpp  platform_time.cpp
